--- a/Settings.ui
+++ b/Settings.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<interface domain="pixel-saver">
+<interface domain="no-title-bar">
 
 <object class="GtkAdjustment" id="Adjust_interval">
   <property name="lower">1</property>
@@ -165,7 +165,7 @@
       <property name="spacing">5</property>
       <child>
         <object class="GtkLabel" id="extension_name">
-          <property name="label">&lt;b&gt;Pixel Saver&lt;/b&gt;</property>
+          <property name="label">&lt;b&gt;No Title Bar&lt;/b&gt;</property>
           <property name="use_markup">True</property>
         </object>
         <packing>
@@ -202,7 +202,7 @@
           </child>
           <child>
             <object class="GtkLabel" id="email_label">
-              <property name="label">Deadalnix (&lt;a href="mailto:deadalnix@gmail.com"&gt;deadalnix@gmail.com&lt;/a&gt;)</property>
+              <property name="label">Fran Glais (&lt;a href="mailto:franglais125@gmail.com"&gt;franglais125@gmail.com&lt;/a&gt;)</property>
               <property name="use_markup">True</property>
             </object>
             <packing>
@@ -225,7 +225,7 @@
           <property name="events"/>
           <property name="halign">center</property>
           <property name="relief">none</property>
-          <property name="uri">https://github.com/deadalnix/pixel-saver</property>
+          <property name="uri">https://github.com/franglais125/no-title-bar</property>
         </object>
         <packing>
           <property name="expand">False</property>
