--- a/Settings.ui
+++ b/Settings.ui
@@ -19,11 +19,11 @@
       <property name="orientation">vertical</property>
       <property name="spacing">12</property>
       <child>
-        <object class="GtkFrame" id="only_main_monitor_frame">
+        <object class="GtkFrame" id="buttons_frame">
           <property name="label_xalign">0</property>
           <property name="shadow_type">in</property>
           <child>
-            <object class="GtkListBox" id="only_main_monitor_listbox">
+            <object class="GtkListBox" id="buttons_listbox">
               <property name="selection_mode">none</property>
               <child>
                 <object class="GtkListBoxRow" id="buttons_listboxrow">
@@ -70,6 +70,54 @@
                 </object>
               </child>
               <child>
+                <object class="GtkListBoxRow" id="theme_listboxrow">
+                  <child>
+                    <object class="GtkGrid" id="theme_grid">
+                      <property name="margin_left">12</property>
+                      <property name="margin_right">12</property>
+                      <property name="margin_top">12</property>
+                      <property name="margin_bottom">12</property>
+                      <property name="column_spacing">12</property>
+                      <child>
+                        <object class="GtkLabel" id="theme_label">
+                          <property name="hexpand">True</property>
+                          <property name="xalign">0</property>
+                          <property name="label" translatable="yes">Theme</property>
+                          <property name="wrap">True</property>
+                        </object>
+                        <packing>
+                          <property name="left_attach">0</property>
+                          <property name="top_attach">1</property>
+                        </packing>
+                      </child>
+                      <child>
+                        <object class="GtkComboBoxText" id="theme_combobox">
+                          <property name="visible">True</property>
+                          <property name="can_focus">False</property>
+                          <property name="valign">center</property>
+                        </object>
+                        <packing>
+                          <property name="left_attach">1</property>
+                          <property name="top_attach">0</property>
+                          <property name="height">2</property>
+                        </packing>
+                      </child>
+                    </object>
+                  </child>
+                </object>
+              </child>
+            </object>
+          </child>
+        </object>
+      </child>
+      <child>
+        <object class="GtkFrame" id="appmenu_frame">
+          <property name="label_xalign">0</property>
+          <property name="shadow_type">in</property>
+          <child>
+            <object class="GtkListBox" id="appmenu_listbox">
+              <property name="selection_mode">none</property>
+              <child>
                 <object class="GtkListBoxRow" id="appmenu_listboxrow">
                   <child>
                     <object class="GtkGrid" id="appmenu_grid">
@@ -105,6 +153,17 @@
                   </child>
                 </object>
               </child>
+            </object>
+          </child>
+        </object>
+      </child>
+      <child>
+        <object class="GtkFrame" id="only_main_monitor_frame">
+          <property name="label_xalign">0</property>
+          <property name="shadow_type">in</property>
+          <child>
+            <object class="GtkListBox" id="only_main_monitor_listbox">
+              <property name="selection_mode">none</property>
               <child>
                 <object class="GtkListBoxRow" id="only_main_monitor_listboxrow">
                   <child>
